test_suite5/ALAN/test_suite/alan-2022-examples/passing/000410_deriv.alan
source Du begin while false do relax end end
